--- a/FE/src/App.module.css
+++ b/FE/src/App.module.css
@@ -6,25 +6,26 @@
   border-radius: 20px;
   border: 1px solid rgba(255, 255, 255, 0.1);
   box-shadow: 0 8px 64px 0 rgba(0, 0, 0, 0.3);
-  padding: 20px; 
+  padding: 40px;
   box-sizing: border-box;
 }
 
 .gridContainer {
   display: grid;
-  height: 100%; 
-  padding: 20px;
+  height: 100%;
+  width: 100%;
+  box-sizing: border-box;
   gap: 20px;
 
-  grid-template-columns: 1fr 1fr 1fr 1fr; /* 4열 */
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr; /* 5열 */
   
   grid-template-areas:
-    "header   header     header   header"
-    "status   status     map      map"
-    "controls1 controls2 map      map"
-    "graph1    graph1    graph2   graph2";
+    "header     header       header    header   header"
+    "status     status       status    map      map"
+    "controls1  controls2    control3  map      map"
+    "graph1     graph2       graph2    graph2   graph2";
     
-  grid-template-rows: 0.1fr auto 1fr 1fr; 
+  grid-template-rows: auto auto 1fr 1fr; 
 }
 
 .header {
@@ -47,23 +48,31 @@
   grid-area: controls2;
 }
 
+.control3 {
+  grid-area: controls3;
+}
+
 .map {
   grid-area: map;
 }
 
 .graph1 {
   grid-area: graph1;
-  height: 150px;
 }
 
 .graph2 {
   grid-area: graph2;
-  height: 150px;
 }
 
 body {
-  background: linear-gradient(to right top,#7bd389 0%, rgba(57, 114, 57, 0) 100%); /*그라데이션*/
+  /*배경 이미지*/
+  background-image: url('./background1.jpg'); 
+  background-size: cover;
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center;
   background-color: #2f3340;
+
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial;
   color: #eaeef6;
@@ -81,4 +90,5 @@ body {
   box-shadow: 0 8px 24px 0 rgba(0, 7, 2, 0.37); /*그림자*/
   border-radius: 8px; 
   padding: 20px;
+  box-sizing: border-box;
 }
